fix dropdown-overlapping leaflet controls

--- a/client/styles/_global.scss
+++ b/client/styles/_global.scss
@@ -21,6 +21,10 @@
 	border-top-color: $dropdown-bg;
 }
 
+.leaflet-top {
+	z-index: auto;
+}
+
 select:hover {
 	cursor: pointer;
 }
